<resources>
    <string name="app_name">Herbal Supply</string>
    <!-- Label for overflow menu option that inserts fake plant data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <!-- Label for overflow menu option that deletes all plant data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Plant Data</string>
    <!-- Label for the sell button -->
    <string name="sell_button">Sell</string>
    <!-- Subtitle text for the empty view that prompts the user to add a pet [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a plant</string>
    <!-- Title for the activity to add a new pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_plant">Add a Plant</string>
    <!-- Title for the activity to edit an existing pet [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_plant">Edit Plant</string>
    <!-- Label for editor menu option to save pet and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>
    <!-- Label for editor overflow menu option that deletes the current pet [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>
    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_plant_successful">Plant saved</string>
    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_plant_failed">Error with saving plant</string>
    <!-- Toast message in editor when current pet was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_plant_successful">Plant updated</string>
    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_plant_failed">Error with updating plant</string>
    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>
    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_plant_successful">Plant deleted</string>
    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_plant_failed">Error with deleting plant</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this plant?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>
    <!-- The currency -->
    <string name="currency">&#x24;</string>
    <!-- Label for the minus button -->
    <string name="minus">-</string>
    <!-- Label for the plus button -->
    <string name="plus">+</string>
    <!-- Hint for the name -->
    <string name="hint_name">Name</string>
    <!-- Hint for the price -->
    <string name="hint_price">Price</string>
    <!-- Hint for the supplier info -->
    <string name="hint_supplier_info">Supplier info</string>
    <!-- Hint for the supplier mail -->
    <string name="hint_supplier_mail">Supplier mail</string>
    <!-- Toast message for the name -->
    <string name="plant_name_required">Plant name required</string>
    <!-- Toast message for the picture -->
    <string name="plant_picture_required">Plant picture required</string>
    <!-- Toast message for the price -->
    <string name="plant_price_required">Plant price required</string>
    <!-- Toast message for the supplier info -->
    <string name="plant_supplier_info_required">Plant supplier info required</string>
    <!-- Toast message for the supplier mail -->
    <string name="plant_supplier_mail_required">Plant supplier mail required</string>
    <!-- Label for the quantity text item -->
    <string name="quantity_text_item">Quantity in stock:</string>
    <!-- Label for the order button -->
    <string name="order">Order</string>
    <!-- Label for the quantity in stock text -->
    <string name="quantity_in_stock">Quantity in stock</string>
    <!-- Label for the plant name -->
    <string name="plant_name">Plant name</string>
    <!-- Label for the plant price -->
    <string name="plant_price">Plant price</string>
    <!-- Label for the plant supplier info -->
    <string name="supplier_info">Supplier info</string>
    <!-- Label for the plant supplier mail -->
    <string name="supplier_mail">Supplier mail</string>
    <!-- Label for the choose a picture button -->
    <string name="choose_picture">Choose a Picture</string>
    <!-- Label for the take a picture button -->
    <string name="take_picture">Take a picture</string>
    <!-- Infos for the dummy plant data -->
    <string name="dummy_plant_name">Dummy plant</string>
    <string name="dummy_plant_picture_uri">android.resource://com.example.android.herbalsupply/drawable/plant_placeholder</string>
    <string name="dummy_plant_density">0.90</string>
    <string name="dummy_plant_price">9.99</string>
    <string name="dummy_website_url">www.aromazone.com</string>
    <string name="density">Density</string>
    <string name="name">Name</string>
    <string name="hint_density">Density</string>
    <string name="unit_g">g</string>
    <string name="unit_ml">mL</string>
    <string name="quantity">Quantity</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_aromazone_url">www.aromazone.com</string>
    <string name="aromazone">Fiche produit</string>
    <string name="calculate">Calculate</string>
    <string name="website">Website</string>
    <string name="reset">Reset</string>
    <string name="category_hydrolats">Hydro</string>
    <string name="category_huile_vegetales">HV</string>
    <string name="category_huile_essentielles">HE</string>
    <string name="category_extraits">Extraits</string>
    <string name="category_poudre">Poudres</string>
    <string name="category_actif">Actifs</string>
    <string name="category_divers">Divers</string>
    <string name="category_contenants">Conten</string>
    <string name="total">Total :</string>
    <string name="quantity_total">Quantity Total :</string>
    <string name="quantity_dispo">Quantity Dispo :</string>
</resources>
