<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:foreground="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/plant_picture"
        android:layout_width="@dimen/thumbnail_width"
        android:layout_height="@dimen/thumbnail_height"
        android:scaleType="centerCrop"
        android:src="@drawable/plant_placeholder"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/plant_name"
            style="@style/ListItemPlantName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Plant Name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_padding">

            <TextView
                android:id="@+id/activity_quantity_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_text_item" />

            <TextView
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding"
                tools:text="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/activity_padding"
        android:layout_marginRight="@dimen/activity_padding"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/price"
                style="@style/ListItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:paddingBottom="@dimen/activity_padding"
                android:paddingTop="@dimen/activity_padding"
                tools:text="9.99" />

            <TextView
                style="@style/ListItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_padding"
                android:text="@string/currency" />

        </LinearLayout>

        <Button
            android:id="@+id/sell_button"
            style="@style/EditorButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/sell_button" />

    </LinearLayout>

</LinearLayout>